--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -20,6 +22,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "scss": "^0.2.4",
+    "scss-loader": "0.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
