--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chai": "^4.2.0",
     "core-js": "^3.6.5",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
