--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "test": "parcel build test/* --no-minify && karma start --single-run"
   },
   "dependencies": {
     "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "core-js": "^3.6.5",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
@@ -23,8 +26,18 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "karma": "^5.1.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^8.1.2",
+    "parcel": "^1.12.4",
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
+    "sinon": "^9.0.3",
+    "sinon-chai": "^3.5.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
