--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kilok-ui",
-  "version": "0.1.0",
+  "name": "kilok-test-1",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
