--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kilok-test-1",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "main": "dist/index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
