--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "vue-server-renderer": "2.5.16",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
